# zephyr-cpp-template

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  DEVELOPMENT.md  Dockerfile  README.md  debug-overlay.conf  prj.conf  sample.yaml
.devcontainer/: devcontainer.json
scripts/: build-image.ps1  build.ps1  docker-setup.ps1  install-custom-sdk.ps1  install-sdk.ps1  shell.ps1
src/: main.cpp
